--- a/services.html
+++ b/services.html
@@ -93,8 +93,8 @@
                 <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
                   <h3 class="heading">Amazon Web Service Deployment</h3>
-                  <h3 class="heading">"?"</h3>
-                  <h3 class="heading">"?"</h3>
+                  <h3 class="heading">Git Bash</h3>
+                  <h3 class="heading">Socket.io</h3>
                 </div>
               </div>      
             </div>
