--- a/about.html
+++ b/about.html
@@ -78,6 +78,7 @@
             <div class="col-md-6 wrap ftco-animate">
               <div class="about-desc">
                 <h1 class="bold-text">About</h1>
+              </div>
                 <div class="p-5">
                   <h2 class="mb-5">Hi! I'm Brian Nguyen</h2>
                   <p>I have skills in React, Node.js, JavaScript, HTML, CSS, AWS, and MySQL.</p>
@@ -87,7 +88,7 @@
                   <p>Email: <a href="#">nguyenbrian@yahoo.com</a></p>
                   <p>Phone: <a href="#">(310)765-3507</a></p>
                 </div>
-              </div>
+              
             </div>
           </div>
           <div class="row d-flex justify-content-end mt-5">
@@ -104,7 +105,11 @@
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Full Stack Web Developer <span> - Grolo</span> </h4>
-	          				<p class="location">Los Angeles, CA</p>
+                    <p class="location">Los Angeles, CA</p>
+                    <p class="location">● Designed and implemented the features including: assets, industries, customer homepage, and profiles which allow Grolo administrators to create and provision new tenants.<br></br>
+                      ● Coded all tiers of the stack, including database design and stored procedures, mid-tier Web API endpoints and services using Express and Node.js and the User Interface using HTML/CSS and custom React Components. <br></br>
+                      ● Created essential components such as a real-time chat component between Grolo administrators and tenants using Socket.io, and an image and file upload using AWS-SDK.<br></br>    
+                      </p>
           				</div>
           				<div class="year">
           					<p>2018 - 2019</p>
@@ -113,7 +118,8 @@
 								<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Hack-A-Wish 2019 <span> - Make-A-Wish Foundation</span> </h4>
-	          				<p class="location">Los Angeles, CA</p>
+                    <p class="location">Los Angeles, CA</p>
+                    <p class="location">● Along with my colleagues,  fully functional web application that recruits and retains volunteers at Make-A-Wish Foundation using MERN tech stack.</p>
           				</div>
           				<div class="year">
           					<p>January 2019</p>
@@ -122,7 +128,8 @@
           			<div class="exp-wrap py-4">
           				<div class="desc">
 	          				<h4>Automobility LA Hackathon 2018 <span> - GM & Visa</span> </h4>
-	          				<p class="location">Los Angeles, CA</p>
+                    <p class="location">Los Angeles, CA</p>
+                    <p class="location">● Along with my colleagues, created a working in-console application for General Motors using GM, Visa, and Google APIs.</p>
           				</div>
           				<div class="year">
           					<p>November 2018</p>
