--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
             </a>
             <div class="text">
               <h4 class="subheading">Application</h4>
-              <h2 class="heading"><a href="http://ignchatroom.us-west-1.elasticbeanstalk.com/">Chat Room</a></h2>
+              <h2 class="heading"><a href="https://ignchat.herokuapp.com/">Chat Room</a></h2>
               <p>Developed a chatroom for two users created using socket.io and deployed with AWS.</p>
-              <p><a href="http://ignchatroom.us-west-1.elasticbeanstalk.com/">View Project</a></p>
+              <p><a href="https://ignchat.herokuapp.com/">View Project</a></p>
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
