--- a/contact.html
+++ b/contact.html
@@ -41,13 +41,14 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="/index" class="logo">Brian Nguyen</a></h1>
+              <h1 class="mb-4"><a href="/index.html" class="logo">Brian Nguyen</a></h1>
               <ul>
-                <li><a href="/index"><span><small>01</small>Home</span></a></li>
-                <li><a href="/about"><span><small>02</small>Resume</span></a></li>
-                <li><a href="/services"><span><small>03</small>Services</span></a></li>
-                <li><a href="/portfolio"><span><small>04</small>Portfolio</span></a></li>
-                <li class="active"><a href="/contact"><span><small>06</small>Contact</span></a></li>
+                <li><a href="index.html"><span><small>01</small>Home</span></a></li>
+                <li><a href="/about.html"><span><small>02</small>Resume</span></a></li>
+                <li><a href="/services.html"><span><small>03</small>Services</span></a></li>
+                <li><a href="/portfolio.html"><span><small>04</small>Portfolio</span></a></li>
+             
+                <li class="/active"><a href="/contact.html"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
@@ -87,19 +88,6 @@
 
         </div>
       </section>
-      
-      <footer class="ftco-footer ftco-bg-dark ftco-section">
-
-          <div class="row">
-            <div class="col-md-12 text-center">
-
-              <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-            </div>
-          </div>
-        </div>
-      </footer>
 
       <!-- loader -->
       <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
