--- a/services.html
+++ b/services.html
@@ -40,14 +40,14 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="/index" class="logo">Brian Nguyen</a></h1>
+              <h1 class="mb-4"><a href="/index.html" class="logo">Brian Nguyen</a></h1>
               <ul>
-                <li><a href="/index"><span><small>01</small>Home</span></a></li>
-                <li><a href="/about"><span><small>02</small>Resume</span></a></li>
-                <li class="active"><a href="/services"><span><small>03</small>Services</span></a></li>
-                <li><a href="/portfolio"><span><small>04</small>Portfolio</span></a></li>
-            
-                <li><a href="/contact"><span><small>06</small>Contact</span></a></li>
+                <li><a href="index.html"><span><small>01</small>Home</span></a></li>
+                <li><a href="/about.html"><span><small>02</small>Resume</span></a></li>
+                <li class="/active"><a href="/services.html"><span><small>03</small>Services</span></a></li>
+                <li><a href="/portfolio.html"><span><small>04</small>Portfolio</span></a></li>
+             
+                <li><a href="/contact.html"><span><small>05</small>Contact</span></a></li>
               </ul>
             </div>
           </div>
@@ -70,11 +70,11 @@
       </header>
 
       <section class="ftco-section">
-        <div class="container mt-5">
+        <div class="container">
           <div class="row justify-content-center mb-5 pb-5">
             <div class="col-md-7 text-center heading-section ftco-animate">
               <span>What i do</span>
-              <h2>My services</h2>
+              <h2>My Services</h2>
             </div>
           </div>
           <div class="row">
@@ -84,7 +84,7 @@
                 <div class="media-body">
                   <h3 class="heading">Full Stack Web Development</h3>
                   <h3 class="heading">Front-End React</h3>
-                  <h3 class="heading">Backend Node.js and MySQL</h3>
+                  <h3 class="heading">Backend Node.js, MySQL & MongoDB</h3>
                 </div>
               </div>      
             </div>
@@ -93,7 +93,7 @@
                 <div class="icon mb-3"><span class="icon-gears"></span></div>
                 <div class="media-body">
                   <h3 class="heading">Amazon Web Service Deployment</h3>
-                  <h3 class="heading">Git Bash</h3>
+                  <h3 class="heading">Github</h3>
                   <h3 class="heading">Socket.io</h3>
                 </div>
               </div>      
@@ -102,8 +102,8 @@
               <div class="media block-6 services p-3 py-4 d-block text-center">
                 <div class="icon mb-3"><span class="icon-code"></span></div>
                 <div class="media-body">
-                  <h3 class="heading">HTML/CSS</h3>
-                  <h3 class="heading">Javascript</h3>
+                  <h3 class="heading">HTML & CSS</h3>
+                  <h3 class="heading">JavaScript</h3>
                   <h3 class="heading">JSX</h3>
                 </div>
               </div>    
@@ -123,14 +123,6 @@
                 <h2 class="mb-3">Contact Me</h2>
                 <p class="h3 email"><a href="#">nguyenbrian12@yahoo.com</a></p>
               </div>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-12 text-center">
-
-              <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-      Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true" style="color: red;"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-      <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
             </div>
           </div>
         </div>
