--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             <div class="text">
               <h4 class="subheading">GitHub</h4>
               <h2 class="heading"><a href="https://github.com/NguyenBrian12?tab=repositories">Repositories</a></h2>
-              <p>Check out my repositories from past projects repos.</p>
+              <p>Check out my repositories from past project repos.</p>
               <p><a href="https://github.com/NguyenBrian12?tab=repositories">View Repositories</a></p>
             </div>
           </div>
