--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </div>
           </div>
           <div class="block-3 d-md-flex ftco-animate" data-scrollax-parent="true">
-            <a href="http://nguyenbrian12.com/Tier-Maker/" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/tierlistmaker.png'); " data-scrollax=" properties: { translateY: '-30%'}">
+            <a href="http://nguyenbrian12.com/Tier-Maker/" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/tierlistmaker.PNG'); " data-scrollax=" properties: { translateY: '-30%'}">
   
             </a>
             <div class="text order-1">
