--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <a href="http://nguyenbrian12.com/Tier-Maker/" class="image order-2 d-flex justify-content-center align-items-center" style="background-image: url('images/tierlistmaker.PNG'); " data-scrollax=" properties: { translateY: '-30%'}">
   
             </a>
-            <div class="text order-1">
+            <div class="text">
               <h4 class="subheading">Application</h4>
               <h2 class="heading"><a href="http://nguyenbrian12.com/Tier-Maker/">TierList Maker</a></h2>
               <p>Rank your favorite things! This Tierlist Maker was created using React, JavaScript, HTML, and CSS. I created this application to learn React Hooks and Redux. One of the challenges I had to overcome was understanding how React Hooks connects with Redux to store the information stateless and in one central location.
@@ -177,7 +177,7 @@
             <div class="text">
               <h4 class="subheading">GitHub</h4>
               <h2 class="heading"><a href="https://github.com/NguyenBrian12?tab=repositories">Repositories</a></h2>
-              <p>Check out my repositories from past project repos.</p>
+              <p>Check out my repositories from past projects and explore my journey as a developer.</p>
               <p><a href="https://github.com/NguyenBrian12?tab=repositories">View Repositories</a></p>
             </div>
           </div>
