--- a/portfolio.html
+++ b/portfolio.html
@@ -110,7 +110,7 @@
             <div class="text">
               <h4 class="subheading">GitHub</h4>
               <h2 class="heading"><a href="https://github.com/NguyenBrian12?tab=repositories">Repositories</a></h2>
-              <p>Check out my repositories from past projects and explore my journey as a developer.</p>
+              <p>Check out my repositories from past projects and explore my journey as a developer. I have created and learned full stack web development through so many projects and professional experiences. I want to continue to grow and improve my programming skills.</p>
               <p><a href="https://github.com/NguyenBrian12?tab=repositories">View Repositories</a></p>
             </div>
           </div>
